1.4.4
- Fix looping bugs
- Fix magnetic grid dropdown menu
- Fix bug preventing the name of the tempo controller from showing up
- Fix assertion failure on right-click
- Fix bug where the config file could get corrupted

1.4.3
- Improve 'new version' notification (no more a warning look, include link to website)
- Better handle when the zoom parameter is missing in a .aria file (which happens when loading a file generated by an old version)
- Fix a case where looping would fail
- Fix more truncated texts on linux
- Fix opening files with double-click on Linux
- Allow setting song start with Ctrl-Click or Alt-Click in the measure bar
- Instrument names may now be translated
- Fix opening a new file when one is already playing on OSX
- Save the background tracks settings
- Make note length detection in score editor stricter to avoid notes being incorrectly detected as triplets
- Improve metronome when using time signatures like 6/8
- Improve score editor note beaming in time signatures like 6/8
- Improve scores : try to avoid showing 1/2 silences on beats not multiples of 2
- Add chinese translation

1.4.2
- Fixed bug that could cause Aria to stop playing prematurely in a song using varying tempo
- Fixed sending playback to external device on OSX
- Fixed playback and export issues that could ensue when a note was placed just before the playback start
- Fixed issues with loop
- Fixed playback sometimes stopping very sharply, not leaving time for notes to ring
- Mark the measure where the song starts in the measure bar
- Fix some dialogs appearing on the wrong screen in multi-monitor setups, especially on linux
- Start using more native button bars in dialogs (Alexis Archambault)
- Fix a few truncated labels on linux

1.4.1
- Use more standard 44100 Hz when exporting to sampled audio on OSX
- On Linux, allow exporting to sampled audio using Fluidsynth
- Fixed exporting midi track names (Alexis Archambault)