@@ -19,6 +19,14 @@
 <!-- ================ CONTENT ================ -->
 <blockquote>
 
+<h2>1.4.4</h2>
+- Fix looping bugs<br/>
+- Fix magnetic grid dropdown menu<br/>
+- Fix bug preventing the name of the tempo controller from showing up<br/>
+- Fix assertion failure on right-click<br/>
+- Fix bug where the config file could get corrupted<br/>
+- Use GDI+ in Windows builds to correct printing<br/><br/>
+
 <h2>1.4.3</h2>
 - Improve 'new version' notification (no more a warning look, include link to website)<br/>
 - Better handle when the zoom parameter is missing in a .aria file (which happens when loading a file generated by an old version)<br/>
