@@ -27,7 +27,7 @@
     </script>
 
     <ul>
-    <li>   <a href="http://sourceforge.net/projects/ariamaestosa/files/ariamaestosa/1.4.3/AriaMaestosa-osx-1.4.3.zip/download"><b>Stable version 1.4.3</b></a>
+    <li>   <a href="http://sourceforge.net/projects/ariamaestosa/files/ariamaestosa/1.4.4/AriaMaestosa-osx-1.4.4.zip/download"><b>Stable version 1.4.4</b></a>
            for mac OS X 10.5 or better (intel only). </li>
     </ul>
     
@@ -79,8 +79,8 @@
     
     <ul>
         <li>
-            <a href="https://sourceforge.net/projects/ariamaestosa/files/ariamaestosa/1.4.3/AriaMaestosaSetup-1.4.3.exe/download">
-                <b>Installer for stable version 1.4.3</b>
+            <a href="https://sourceforge.net/projects/ariamaestosa/files/ariamaestosa/1.4.4/AriaMaestosaSetup-1.4.4.exe/download">
+                <b>Installer for stable version 1.4.4</b>
             </a>
         </li>
     </ul>
