@@ -1,4 +1,4 @@
 
-#define VERSION_STRING L"1.4.3"
-#define VERSION_INT 104030
+#define VERSION_STRING L"1.4.4"
+#define VERSION_INT 104040
 #define IS_BETA false
